Tweaks to keep repo up to date

--- a/document/main.bib
+++ b/document/main.bib
@@ -229,6 +229,15 @@ year = {2000}
   pages={22--29},
   year={2008}
 }
+@inproceedings{Ayewah:2008:FBSurvey,
+	author = {Ayewah, Nathaniel and Pugh, William},
+	booktitle = {Proc. DEFECTS},
+	doi = {10.1145/1390817.1390819},
+	keywords = {FindBugs,Java,bug patterns,bugs,false positives,software defects,software quality,static analysis},
+	pages = {1--5},
+	title = {{A report on a survey and study of static analysis users}},
+	year = {2008}
+}
 @article{MurphyHill:2012:Refactor,
   title={How we refactor, and how we know it},
   author={Murphy-Hill, E. and Parnin, C. and Black, A. P.},
@@ -238,7 +247,7 @@ year = {2000}
   pages={5--18},
   year={2012}
 }
-@article{Muslu:2012:Speculative,
+@article{Mucslu:2012:Speculative,
   title={Speculative analysis of integrated development environment recommendations},
   author={Mu{\c{s}}lu, K{\i}van{\c{c}} and Brun, Yuriy and Holmes, Reid and Ernst, Michael D and Notkin, David},
   journal={ACM SIGPLAN Notices},
@@ -1160,6 +1169,219 @@ note={\url{https://github.com/jacoco/jacoco/issues/15}}
 	pages={1--8},
 	year={2007},
 	organization={ACM}
+}
+@book{Chess:2007:Secure,
+	author = {Chess, Brian and West, Jacob},
+	booktitle = {Addison-Wesley Professional},
+	publisher = {Addison-Wesley Professional},
+	pages = {624},
+	title = {{Secure Programming with Static Analysis}},
+	year = {2007}
+}
+@inproceedings{Ayewah:2009:Checklists,
+	booktitle = {Proc. DEFECTS},
+	doi = {10.1145/1555860.1555864},
+	keywords = {FindBugs,Java,bug patterns,bugs,false positives,software defects,software quality,static analysis},
+	pages = {11--15},
+	title = {{Using checklists to review static analysis warnings}},
+	year = {2009}
+}
+@inproceedings{Vorobyov:2010:Comparing,
+	author = {Kostyantyn Vorobyov and Krishna, Padmanabhan},
+	booktitle = {Proc. SSV},
+	title = {{Comparing Model Checking and Static Program Analysis: A Case Study in Error Detection Approaches}},
+	pages = {1--7},
+	year = {2010}
+}
+@article{Dastani:2002:Perception,
+	author = {Dastani, Mehdi},
+	journal = {Journal of Visual Languages and Computing},
+	keywords = {HCI, data visualization, visual perception},
+	title = {The Role of Visual Perception in Data Visualization},
+	volume = {13},
+	number = {6},
+	pages = {601--622},
+	year = {2002}
+}
+@inproceedings{Heckman:2008:Faultbench,
+	abstract = {},
+	author = {Heckman, Sarah and Williams, Laurie},
+	booktitle = {Proc. ESEM},
+	pages = {41-50},
+	title = {{On Establishing a Benchmark for Evaluating Static Analysis Alert Prioritization and Classification Techniques}},
+	year = {2008}
+}
+@inproceedings{Layman:2007:FaultFix,
+	author={Layman, Lucas and Williams, Laurie and St. Amant, Robert},
+	booktitle={Proc. ESEM},
+	title={Toward Reducing Fault Fix Time: Understanding Developer Behavior for the Design of Automated Fault Detection Tools},
+	pages={176-185},
+	year={2007}
+}
+@inproceedings{Hartmann:2010:Suggestions,
+	author = {Hartmann, B. and MacDougall, D. and Brandt, J. and Klemmer, S. R.},
+	booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing},
+	pages = {1019--1028},
+	title = {{What would other programmers do: suggesting solutions to error messages}},
+	year = {2010}
+}
+@article{schlungbaum1996model,
+	title={Model-based user interface software tools-current state of declarative models},
+	author={Schlungbaum, Egbert},
+	year={1996},
+	publisher={Georgia Institute of Technology}
+}
+@inproceedings{lonczewski1996fuse,
+	title={The FUSE-System: an Integrated User Interface Design Environment.},
+	author={Lonczewski, Frank and Schreiber, Siegfried},
+	booktitle={CADUI},
+	volume={96},
+	pages={37--56},
+	year={1996}
+}
+@article{zou2008adapting,
+	title={Adapting the User Interface of Integrated Development Environments (IDEs) for Novice Users.},
+	author={Zou, Ying and Lerner, Michael and Leung, Alex and Morisson, Scott and Wringe, Matt},
+	journal={Journal of Object Technology},
+	volume={7},
+	number={7},
+	pages={55--74},
+	year={2008}
+}
+@inproceedings{ko2004six,
+	title={Six learning barriers in end-user programming systems},
+	author={Ko, Andrew J and Myers, Brad A and Aung, Htet Htet},
+	booktitle={Visual Languages and Human Centric Computing, 2004 IEEE Symposium on},
+	pages={199--206},
+	year={2004},
+	organization={IEEE}
+}
+@inproceedings{luk2005pin,
+	title={Pin: building customized program analysis tools with dynamic instrumentation},
+	author={Luk, Chi-Keung and Cohn, Robert and Muth, Robert and Patil, Harish and Klauser, Artur and Lowney, Geoff and Wallace, Steven and Reddi, Vijay Janapa and Hazelwood, Kim},
+	booktitle={Acm sigplan notices},
+	volume={40},
+	number={6},
+	pages={190--200},
+	year={2005},
+	organization={ACM}
+}
+@article{dugan2000developing,
+	title={Developing a low-cost high-quality software tool for dynamic fault-tree analysis},
+	author={Dugan, Joanne Bechta and Sullivan, Kevin J and Coppit, David},
+	journal={Reliability, IEEE Transactions on},
+	volume={49},
+	number={1},
+	pages={49--59},
+	year={2000},
+	publisher={IEEE}
+}
+@inproceedings{hamou2004survey,
+	title={A survey of trace exploration tools and techniques},
+	author={Hamou-Lhadj, Abdelwahab and Lethbridge, Timothy C},
+	booktitle={Proceedings of the 2004 conference of the Centre for Advanced Studies on Collaborative research},
+	pages={42--55},
+	year={2004},
+	organization={IBM Press}
+}
+@inproceedings{pacione2003comparative,
+	title={A comparative evaluation of dynamic visualisation tools},
+	author={Pacione, Michael J and Roper, Marc and Wood, Murray},
+	booktitle={null},
+	pages={80},
+	year={2003},
+	organization={IEEE}
+}
+@inproceedings{storey1997rigi,
+	title={Rigi: a visualization environment for reverse engineering},
+	author={Storey, Margaret-Anne D and Wong, Kenny and M{\"u}ller, Hausi A},
+	booktitle={Proceedings of the 19th international conference on Software engineering},
+	pages={606--607},
+	year={1997},
+	organization={ACM}
+}
+@article{bennett2008survey,
+	title={A survey and evaluation of tool features for understanding reverse-engineered sequence diagrams},
+	author={Bennett, Chris and Myers, Del and Storey, M-A and German, Daniel M and Ouellet, David and Salois, Martin and Charland, Philippe},
+	journal={Journal of Software Maintenance and Evolution: Research and Practice},
+	volume={20},
+	number={4},
+	pages={291--315},
+	year={2008},
+	publisher={Wiley Online Library}
+}
+@inproceedings{baca2009static,
+	title={Static Code Analysis to Detect Software Security Vulnerabilities-Does Experience Matter?},
+	author={Baca, Dejan and Petersen, Kai and Carlsson, Bengt and Lundberg, Lars},
+	booktitle={Availability, Reliability and Security, 2009. ARES'09. International Conference on},
+	pages={804--810},
+	year={2009},
+	organization={IEEE}
+}
+@inproceedings{mucslu2012improving,
+	title={Improving IDE recommendations by considering global implications of existing recommendations},
+	author={Mu{\c{s}}lu, K{\i}van{\c{c}} and Brun, Yuriy and Holmes, Reid and Ernst, Michael D and Notkin, David},
+	booktitle={Proceedings of the 34th International Conference on Software Engineering},
+	pages={1349--1352},
+	year={2012},
+	organization={IEEE Press}
+}
+@article{murray1999authoring,
+	title={Authoring intelligent tutoring systems: An analysis of the state of the art},
+	author={Murray, Tom},
+	journal={International Journal of Artificial Intelligence in Education (IJAIED)},
+	volume={10},
+	pages={98--129},
+	year={1999}
+}
+@inproceedings{amershi2007unsupervised,
+	title={Unsupervised and supervised machine learning in user modeling for intelligent learning environments},
+	author={Amershi, Saleema and Conati, Cristina},
+	booktitle={Proceedings of the 12th international conference on Intelligent user interfaces},
+	pages={72--81},
+	year={2007},
+	organization={ACM}
+}
+@article{perscheid2012test,
+	title={Test-driven fault navigation for debugging reproducible failures},
+	author={Perscheid, Michael and Haupt, Michael and Hirschfeld, Robert and Masuhara, Hidehiko},
+	journal={Information and Media Technologies},
+	volume={7},
+	number={4},
+	pages={1377--1400},
+	year={2012},
+	publisher={Information and Media Technologies Editorial Board}
+}
+@inproceedings{eagle2015measuring,
+	title={Measuring Implicit Science Learning with Networks of Player-Game Interactions},
+	author={Eagle, Michael and Rowe, Elizabeth and Hicks, Drew and Brown, Rebecca and Barnes, Tiffany and Asbell-Clarke, Jodi and Edwards, Teon},
+	booktitle={Proceedings of the 2015 Annual Symposium on Computer-Human Interaction in Play},
+	pages={499--504},
+	year={2015},
+	organization={ACM}
+}
+@inproceedings{hicks2014building,
+	title={Building games to learn from their players: Generating hints in a serious game},
+	author={Hicks, Andrew and Peddycord III, Barry and Barnes, Tiffany},
+	booktitle={Intelligent Tutoring Systems},
+	pages={312--317},
+	year={2014},
+	organization={Springer}
+}
+@article{stamper2009unsupervised,
+	title={Unsupervised MDP Value Selection for Automating ITS Capabilities.},
+	author={Stamper, John and Barnes, Tiffany},
+	journal={International Working Group on Educational Data Mining},
+	year={2009},
+	publisher={ERIC}
+}
+@inproceedings{stylos2009improving,
+	title={Improving API documentation using API usage information},
+	author={Stylos, Jeffrey and Faulring, Andrew and Yang, Zizhuang and Myers, Brad A},
+	booktitle={Visual Languages and Human-Centric Computing, 2009. VL/HCC 2009. IEEE Symposium on},
+	pages={119--126},
+	year={2009},
+	organization={IEEE}
 }
 @misc{SunJDK,
 	key ={zzzSunJDK},
